# haskell_lunch_and_learn_1

./: README.md  example.csv  haskellLunchAndLearn.cabal
src/Intro/: Main.hs
src/Worker/: Main.hs
