name:                haskellLunchAndLearn
version:             0.1.0.0
synopsis:            Intro demo from Haskell Lunch and Learn
description:         Please see README.md
homepage:            http://github.com/quintenpalmer/haskell_lunch_and_learn_1#readme
license:             MIT
license-file:        LICENSE
author:              Quinten Palmer
maintainer:          quintenpalmer@gmail.com
copyright:           2015 Quinten Palmer
build-type:          Simple
category:            Examples
-- extra-source-files:
cabal-version:       >=1.10

executable landl-example
  hs-source-dirs:      src/Intro
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4 && < 5
  default-language:    Haskell2010

executable worker-example
  hs-source-dirs:      src/Worker
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4 && < 5
                     , split
                     , safe
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/quintenpalmer/haskell_lunch_and_learn_1
